# nekore

./: .flake8  .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: python-publish.yml
betriebskosten/: __init__.py  accounting.py  accounting_processor.py  address.py  allocation_item.py  allocation_strategy.py  apartment.py  apartment_strategy.py  bank_account.py  building.py  contact.py  direct_invoice_strategy.py  document_generator.py  document_template.py  floor_area_strategy.py  invoice.py  invoice_collection.py  labor_cost_item.py  resident_number_strategy.py  tenant.py  time_period.py
betriebskosten/calculations/: accounting_processor.py  apartment_strategy.py  direct_invoice_strategy.py  floor_area_strategy.py  resident_number_strategy.py
betriebskosten/document/: document_generator.py
betriebskosten/document/assets/: __init__.py
betriebskosten/models/: __init__.py  allocation_strategy.py  apartment.py  building.py  invoice.py  invoice_collection.py  time_period.py
betriebskosten/tests/: test_apartment.py
example/: README.md  example_2021.py
nekore/: __init__.py
nekore/calculations/: __init__.py  accounting_processor.py  apartment_strategy.py  direct_invoice_strategy.py  floor_area_strategy.py  invoice_collection_processor.py  resident_number_strategy.py
nekore/document/: __init__.py  document_generator.py
nekore/models/: __init__.py  accounting.py  allocation_strategy.py  apartment.py  building.py  invoice.py  invoice_collection.py  labor_cost_item.py  tenant.py  time_period.py
scripts/: install_git_hooks.sh
src/nekore/: __init__.py
src/nekore/calculations/: accounting_processor.py  direct_invoice_strategy.py  invoice_collection_processor.py  (+1 more)
tests/calculations/: test_resident_number_strategy.py
tests/fixtures/: __init__.py  allocation_strategy.py  apartment.py  building.py  contact.py  invoice.py  tenant.py  time_period.py
tests/models/: test_apartment.py  test_building.py  test_invoice_collection.py  test_tenant.py  test_time_period.py
(+8 files in other folders)
