[tool.poetry]
name = "nekore"
version = "1.0.0"
description = "Create operating cost statements for apartment buildings."
authors = ["Starbat <45294825+Starbat@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Starbat/nekore"

[tool.poetry.dependencies]
python = "^3.12"
fpdf2 = "^2.7.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.2"
types-fpdf2 = "^2.7.8.20240217"
ruff = "^0.5.2"

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
