[tool.poetry]
name = "nekore"
version = "1.1.2"
description = "Create operating cost statements for apartment buildings."
authors = ["Starbat <45294825+Starbat@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Starbat/nekore"

[tool.poetry.dependencies]
python = "^3.13"
fpdf2 = "^2.8.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.5"
types-fpdf2 = "^2.8.3.20250516"
ruff = "^0.11.10"

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
